[gd_scene load_steps=14 format=2]

[ext_resource path="res://ReusableUI/CharEditPanel/CharEditPanel.gd" type="Script" id=1]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox16Px.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/plus_d.png" type="Texture" id=3]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/plus_a.png" type="Texture" id=4]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/plus_n.png" type="Texture" id=5]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/minus_n.png" type="Texture" id=6]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/minus_a.png" type="Texture" id=7]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/plus_h.png" type="Texture" id=8]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox24pt.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assetts3.0/OtherUI/ExoItalicBoldBlue14px.tres" type="DynamicFont" id=10]
[ext_resource path="res://ReusableUI/Bar/Bar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assetts3.0/UI/Armatech/Buttons/minus_h.png" type="Texture" id=12]
[ext_resource path="res://Assetts3.0/OtherUI/RootTheme.tres" type="Theme" id=13]



[node name="CharEditPanel" type="Panel"]
anchor_right = 0.233
anchor_bottom = 0.363
margin_right = 0.639984
margin_bottom = -0.0400085
size_flags_vertical = 3
theme = ExtResource( 13 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -7.99997
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox"]
margin_right = 432.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 9 )
text = "CHARACTER NAME"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 40.0
margin_right = 432.0
margin_bottom = 104.0

[node name="CPoints" type="VBoxContainer" parent="VBox/HBox"]
margin_right = 140.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="VBox/HBox/CPoints"]
margin_right = 140.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 9 )
text = "C. Points"
align = 1
valign = 1

[node name="Points" type="Label" parent="VBox/HBox/CPoints"]
margin_top = 32.0
margin_right = 140.0
margin_bottom = 56.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = ExtResource( 9 )
text = "XX / XX"
align = 1
valign = 1

[node name="Bars" type="VBoxContainer" parent="VBox/HBox"]
margin_left = 148.0
margin_right = 432.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="VBox/HBox/Bars" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 284.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )

[node name="MoraleBar" parent="VBox/HBox/Bars" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 284.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 32 )
barType = 2

[node name="TraitsBox" type="VBoxContainer" parent="VBox"]
margin_top = 104.0
margin_right = 432.0
margin_bottom = 363.0

[node name="TitleRow" type="HBoxContainer" parent="VBox/TraitsBox"]
margin_right = 432.0
margin_bottom = 19.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBox/TraitsBox/TitleRow"]
margin_right = 140.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSpacer" type="Container" parent="VBox/TraitsBox/TitleRow"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Label" parent="VBox/TraitsBox/TitleRow"]
margin_left = 180.0
margin_top = 3.0
margin_right = 251.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Base"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod" type="Label" parent="VBox/TraitsBox/TitleRow"]
margin_left = 251.0
margin_top = 3.0
margin_right = 321.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Mod"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="VBox/TraitsBox/TitleRow"]
margin_left = 321.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Total"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSpacer" type="Container" parent="VBox/TraitsBox/TitleRow"]
margin_left = 392.0
margin_right = 432.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR" type="HBoxContainer" parent="VBox/TraitsBox"]
margin_top = 27.0
margin_right = 432.0
margin_bottom = 67.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBox/TraitsBox/STR"]
margin_top = 12.0
margin_right = 140.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 10 )
text = "Strength"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="VBox/TraitsBox/STR"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Label" parent="VBox/TraitsBox/STR"]
margin_left = 180.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod" type="Label" parent="VBox/TraitsBox/STR"]
margin_left = 251.0
margin_top = 10.0
margin_right = 321.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="VBox/TraitsBox/STR"]
margin_left = 321.0
margin_top = 10.0
margin_right = 392.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="VBox/TraitsBox/STR"]
margin_left = 392.0
margin_right = 432.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEX" type="HBoxContainer" parent="VBox/TraitsBox"]
margin_top = 75.0
margin_right = 432.0
margin_bottom = 115.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBox/TraitsBox/DEX"]
margin_top = 12.0
margin_right = 140.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 10 )
text = "Dexerity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="VBox/TraitsBox/DEX"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Label" parent="VBox/TraitsBox/DEX"]
margin_left = 180.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod" type="Label" parent="VBox/TraitsBox/DEX"]
margin_left = 251.0
margin_top = 10.0
margin_right = 321.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="VBox/TraitsBox/DEX"]
margin_left = 321.0
margin_top = 10.0
margin_right = 392.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="VBox/TraitsBox/DEX"]
margin_left = 392.0
margin_right = 432.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PER" type="HBoxContainer" parent="VBox/TraitsBox"]
margin_top = 123.0
margin_right = 432.0
margin_bottom = 163.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBox/TraitsBox/PER"]
margin_top = 12.0
margin_right = 140.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 10 )
text = "Perception"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="VBox/TraitsBox/PER"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Label" parent="VBox/TraitsBox/PER"]
margin_left = 180.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod" type="Label" parent="VBox/TraitsBox/PER"]
margin_left = 251.0
margin_top = 10.0
margin_right = 321.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="VBox/TraitsBox/PER"]
margin_left = 321.0
margin_top = 10.0
margin_right = 392.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="VBox/TraitsBox/PER"]
margin_left = 392.0
margin_right = 432.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="INT" type="HBoxContainer" parent="VBox/TraitsBox"]
margin_top = 171.0
margin_right = 432.0
margin_bottom = 211.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBox/TraitsBox/INT"]
margin_top = 12.0
margin_right = 140.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 10 )
text = "Intelligence"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="VBox/TraitsBox/INT"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Label" parent="VBox/TraitsBox/INT"]
margin_left = 180.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod" type="Label" parent="VBox/TraitsBox/INT"]
margin_left = 251.0
margin_top = 10.0
margin_right = 321.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="VBox/TraitsBox/INT"]
margin_left = 321.0
margin_top = 10.0
margin_right = 392.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="VBox/TraitsBox/INT"]
margin_left = 392.0
margin_right = 432.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHA" type="HBoxContainer" parent="VBox/TraitsBox"]
margin_top = 219.0
margin_right = 432.0
margin_bottom = 259.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Label" type="Label" parent="VBox/TraitsBox/CHA"]
margin_top = 12.0
margin_right = 140.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_fonts/font = ExtResource( 10 )
text = "Charisma"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="VBox/TraitsBox/CHA"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Label" parent="VBox/TraitsBox/CHA"]
margin_left = 180.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod" type="Label" parent="VBox/TraitsBox/CHA"]
margin_left = 251.0
margin_top = 10.0
margin_right = 321.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="VBox/TraitsBox/CHA"]
margin_left = 321.0
margin_top = 10.0
margin_right = 392.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "X"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="VBox/TraitsBox/CHA"]
margin_left = 392.0
margin_right = 432.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBox"]
margin_top = 363.0
margin_right = 432.0
margin_bottom = 388.0
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBox/VBoxContainer"]
margin_right = 49.0
margin_bottom = 25.0
text = "Save"

[node name="Container" type="Container" parent="VBox/VBoxContainer"]
margin_left = 57.0
margin_right = 370.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBox/VBoxContainer"]
margin_left = 378.0
margin_right = 432.0
margin_bottom = 25.0
text = "Reset"
[connection signal="pressed" from="VBox/TraitsBox/STR/PlusButton" to="." method="_on_PlusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/STR/MinusButton" to="." method="_on_MinusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/DEX/PlusButton" to="." method="_on_PlusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/DEX/MinusButton" to="." method="_on_MinusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/PER/PlusButton" to="." method="_on_PlusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/PER/MinusButton" to="." method="_on_MinusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/INT/PlusButton" to="." method="_on_PlusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/INT/MinusButton" to="." method="_on_MinusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/CHA/PlusButton" to="." method="_on_PlusButton_pressed" binds= [ "STR" ]]
[connection signal="pressed" from="VBox/TraitsBox/CHA/MinusButton" to="." method="_on_MinusButton_pressed" binds= [ "STR" ]]
